--- a/shards/all_in_one_with_mysql/wr_server.yml
+++ b/shards/all_in_one_with_mysql/wr_server.yml
@@ -64,10 +64,6 @@ network:
 #                      | flushes data to disk.                                      |            |                 |
 #                      | 0 means disable the regular flush.                         |            |                 |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# file_cleanup_timeout | The interval, in seconds, at which Milvus permanently      | Integer    | 10 (s)          |
-#                      | delete unused segment file from disk after it was marked   |            |                 |
-#                      | as soft-delete state.(this is a hidden config)             |            |                 |
-#----------------------+------------------------------------------------------------+------------+-----------------+
 # s3_enabled           | If using s3 storage backend.                               | Boolean    | false           |
 #----------------------+------------------------------------------------------------+------------+-----------------+
 # s3_use_https         | If using s3 using https scheme.                            | Boolean    | false           |
@@ -76,11 +72,11 @@ network:
 #----------------------+------------------------------------------------------------+------------+-----------------+
 # s3_port              | The s3 server port.                                        | Integer    | 80              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# s3_access_key        | The access key for accessing s3 service.                   | String     | s3_access_key   |
+# s3_access_key        | The access key for accessing s3 service.                   | String     | ""              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# s3_secret_key        | The secrey key for accessing s3 service.                   | String     | s3_secret_key   |
+# s3_secret_key        | The secret key for accessing s3 service.                   | String     | ""              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# s3_bucket            | The s3 bucket name for store milvus's data.                | String     | s3_bucket       |
+# s3_bucket            | The s3 bucket name for store milvus's data.                | String     | ""              |
 #                      | Note: please using differnet bucket for different milvus   |            |                 |
 #                      |       cluster.                                             |            |                 |
 #----------------------+------------------------------------------------------------+------------+-----------------+
@@ -94,13 +90,27 @@ network:
 # oss_endpoint         | The oss endpoint.                                          | String     | see description |
 #                      |   default: https://oss-cn-hangzhou.aliyuncs.com            |            |                 |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# oss_access_key       | The access key for accessing oss service.                  | String     | oss_access_key  |
+# oss_access_key       | The access key for accessing oss service.                  | String     | ""              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# oss_secret_key       | The secrey key for accessing oss service.                  | String     | oss_secret_key  |
+# oss_secret_key       | The secret key for accessing oss service.                  | String     | ""              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
-# oss_bucket           | The oss bucket name for store milvus's data.               | String     | oss_bucket      |
+# oss_bucket           | The oss bucket name for store milvus's data.               | String     | ""              |
 #                      | Note: please using differnet bucket for different milvus   |            |                 |
 #                      |       cluster.                                             |            |                 |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_enabled          | If using cos storage backend.                              | Boolean    | false           |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_region           | The cos region.                                            | String     | ap-guangzhou    |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_secret_id        | The secret id for accessing cos service.                   | String     | ""              |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_secret_key       | The secret key for accessing cos service.                  | String     | ""              |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_bucket           | The cos bucket name for store milvus's data.               | String     | ""              |
+#                      | Note: please using differnet bucket for different milvus   |            |                 |
+#                      |       cluster.                                             |            |                 |
+#----------------------+------------------------------------------------------------+------------+-----------------+
+# cos_dest_domain      | If use custom domain, set dest domain                      | String     | ""              |
 #----------------------+------------------------------------------------------------+------------+-----------------+
 storage:
   path: /var/lib/milvus
