--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -20,100 +20,23 @@ on:
       - '!ci/jenkins/**'
 
 jobs:
-  ubuntu:
-    name: AMD64 Ubuntu ${{ matrix.ubuntu }}
+  build-images:
+    name: Build Images
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        ubuntu: [18.04]
-    env:
-      UBUNTU: ${{ matrix.ubuntu }}
+        arch_type: ["cpu", "gpu"]
     steps:
-      # This step checks out a copy of your repository.
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
       - name: Checkout Milvus
         uses: actions/checkout@v1
-      - name: Check Dockerfile
-        uses: reviewdog/action-hadolint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check # Default is github-pr-check
-          hadolint_ignore: DL3008
-      - name: Docker Pull
-        shell: bash
-        run: |
-          docker-compose -f ./docker/docker-compose.yml pull --ignore-pull-failures db
-          docker-compose -f ./docker/docker-compose.yml pull --ignore-pull-failures ubuntu-core
       - name: Docker Build
         shell: bash
         run: |
-          docker-compose -f ./docker/docker-compose.yml build ubuntu-core
-          docker rmi $(docker images | grep '<none>' | awk '{print $3}') || exit 0
-      - name: Docker Run
-        run: |
-          docker-compose -f ./docker/docker-compose.yml run --use-aliases -d db
-          docker-compose -f ./docker/docker-compose.yml run ubuntu-core
-      - name: Docker Push
-        if: success() && github.event_name == 'push' && github.repository == 'milvus-io/milvus'
-        continue-on-error: true
-        shell: bash
-        run: |
-          docker login -u ${{ secrets.DOCKERHUB_USER }} \
-                       -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker-compose -f ./docker/docker-compose.yml push ubuntu-core
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./ci/scripts/output_new.info
-          name: ubuntu-${{ matrix.ubuntu }}-unittests
-          flags: cpu_version_ubuntu_18_04_unittest
-          yml: ./codecov.yaml
+          docker build -t matrixji/milvus:1.1-cos-${{ matrix.arch_type }}-${{ steps.date.outputs.date }} -f Dockerfile.${{ matrix.arch_type }} .
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push matrixji/milvus:1.1-cos-${{ matrix.arch_type }}-${{ steps.date.outputs.date }}
 
-  centos:
-    name: AMD64 CentOS ${{ matrix.centos }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        centos: [7]
-    env:
-      CENTOS: ${{ matrix.centos }}
-    steps:
-      - name: Checkout Milvus
-        uses: actions/checkout@v1
-      - name: Check Dockerfile
-        uses: mgrachev/action-hadolint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check # Default is github-pr-check
-      - name: Docker Pull
-        shell: bash
-        run: |
-          docker-compose -f ./docker/docker-compose.yml pull --ignore-pull-failures db
-          docker-compose -f ./docker/docker-compose.yml pull --ignore-pull-failures centos-core
-      - name: Docker Build
-        shell: bash
-        run: |
-          docker-compose -f ./docker/docker-compose.yml build centos-core
-          docker rmi $(docker images | grep '<none>' | awk '{print $3}') || exit 0
-      - name: Docker Run
-        run: |
-          docker-compose -f ./docker/docker-compose.yml run --use-aliases -d db
-          docker-compose -f ./docker/docker-compose.yml run centos-core
-      - name: Docker Push
-        if: success() && github.event_name == 'push' && github.repository == 'milvus-io/milvus'
-        continue-on-error: true
-        shell: bash
-        run: |
-          docker login -u ${{ secrets.DOCKERHUB_USER }} \
-                       -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker-compose -f ./docker/docker-compose.yml push centos-core
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./ci/scripts/output_new.info
-          name: centos-${{ matrix.centos }}-unittests
-          flags: cpu_version_centos7_unittest
-          yml: ./codecov.yaml
